# web_eye_tracking_recorder

./: .gitignore  CLAUDE.md  README.md  biome.json  package.json  tsconfig.json  vitest.config.ts
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml
examples/: README.md  advanced-usage.ts  basic-usage.ts  browser-example.html  index.html  mock-eye-tracking-server.ts  package.json  screen-recording-only.html  server.ts
examples/basic-demo/: demo.js  package.json
examples/client/: index.html  package.json  vite.config.ts
examples/client/src/: App.tsx  styles.css
examples/client/src/components/: ConfigSection.tsx  ControlPanel.tsx  (+5 more)
examples/react/: index.html  package.json  vite.config.ts
examples/react/src/: App.tsx
examples/shared/: demo-logic.ts
examples/vanilla-js/: demo.js  demo.ts  index.html  package.json  server.ts  vite.config.ts
examples/websocket-server-python/: README.md  pyproject.toml
examples/websocket-server-python/src/: app.py  config.py  gaze_filter.py  models.py  tobii_pro_eye_tracker.py
src/: experiment-recorder.ts  index.ts
src/core/: Database.ts  ExperimentRecorder.ts  GazeTracker.ts  ScreenRecorder.ts  SyncSystem.ts
src/recorder/: browser-info.ts  core.ts  export.ts  ssr-guard.ts  storage.ts  types.ts
src/services/: database.ts  eye-tracking.ts  gaze-tracking.ts  screen-recording.ts  sync.ts  synchronization.ts
src/store/: index.ts
src/types/: index.ts
src/utils/: index.ts
test/: browser-info.test.ts  export.test.ts  setup.ts  sync-system.test.ts  synchronization.test.ts  utils.test.ts
(+4 files in other folders)
