[project]
name = "tobii-pro-interaction"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.116.1",
    "numpy>=2.2.6",
    "pydantic>=2.11.7",
    "tobii-research>=2.1.0",
    "uvicorn[standard]>=0.35.0",
]

[project.scripts]
dev = "uvicorn src.app:app --reload"
